<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/estilo_boton_blanco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <expansion.neto.com.mx.jefeapp.utils.font.RobotoTextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/autorizado"
            android:textColor="@color/azultaco"
            android:textSize="14sp"
            app:typeface="robotoRegular" />

        <EditText
            android:hint="@string/favor"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edit"
            android:layout_width="300dp"
            android:textSize="12sp"
            android:layout_height="100dp" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/estilo_boton_azul_claro"
            android:id="@+id/aceptar"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:text="@string/aceptar"
            android:layout_margin="10dp" />


    </LinearLayout>
</layout>